--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Deylith.dev - Agentes IA e Automação para Empresas</title>
     <meta name="description" content="Transforme seu negócio com agentes IA personalizados. Automação inteligente, economia de custos e escalabilidade para empresas de qualquer setor." />
     <meta name="author" content="Deylith.dev" />
     <meta name="keywords" content="agentes IA, automação, inteligência artificial, chatbot, atendimento automatizado, SDR" />
 
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/favicon.png">
+
+    <!-- Open Graph (Preview WhatsApp, Facebook, LinkedIn) -->
     <meta property="og:title" content="Deylith.dev - Agentes IA e Automação" />
-    <meta property="og:description" content="Transforme seu negócio com agentes IA personalizados" />
+    <meta property="og:description" content="Transforme seu negócio com agentes IA personalizados. Automação inteligente, economia de custos e escalabilidade para empresas de qualquer setor." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://deylith.dev" />
+    <meta property="og:image" content="https://deylith.dev/og-image.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@deylith_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Deylith.dev - Agentes IA e Automação" />
+    <meta name="twitter:description" content="Transforme seu negócio com agentes IA personalizados. Automação inteligente, economia de custos e escalabilidade para empresas de qualquer setor." />
+    <meta name="twitter:image" content="https://deylith.dev/og-image.png" />
 
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,7 +34,9 @@
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+
+    <!-- Scripts principais -->
+    <!-- IMPORTANTE: não remover este script ou o comentário abaixo -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
