--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
+     <meta name="twitter:site" content="@deylith_dev" />
     <meta name="twitter:title" content="Deylith.dev - Agentes IA e Automação" />
     <meta name="twitter:description" content="Transforme seu negócio com agentes IA personalizados. Automação inteligente, economia de custos e escalabilidade para empresas de qualquer setor." />
     <meta name="twitter:image" content="https://deylith.dev/og-image.png" />
